[metadata]
name = cst_python
version = 1.0.0
author = H.IAAC
author_email = hiaac@unicamp.br
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hiaac.unicamp.br/
project_urls =
    Bug Tracker = 
    Documentation = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    numpy

[options.packages.find]
where = src
